k8s/infra/argo/argo-ingress.yml
#This is the actual ingress resource, which exposes the ArgoCD UI through the Traefik Ingress Controller.

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd
  namespace: argocd

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: argo.sagarpanda.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: argocd-server
                port:
                  number: 80
